Converted SA19, 20, 21 TOC files, correct MA index

--- a/01_agama/samyukta/20/index.html
+++ b/01_agama/samyukta/20/index.html
@@ -1,21 +1,174 @@
-<!--SĀ 20.1 	T99.1226 	? 	T100.53, SN 3.1
-SĀ 20.2 	T99.1227 	? 	T100.54, SN 3.22, EĀ 26.7
-SĀ 20.3 	T99.1228 	? 	T100.55, SN 3.4
-SĀ 20.4 	T99.1229 	? 	T100.56, SN 3.5
-SĀ 20.5 	T99.1230 	? 	T100.58, SN 3.6
-SĀ 20.6 	T99.1231 	? 	T100.57, SN 3.7
-SĀ 20.7 	T99.1232 	? 	T100.59, SN 3.19
-SĀ 20.8 	T99.1233 	? 	T100.60, SN 3.20, EĀ 23.4
-SĀ 20.9 	T99.1234 	? 	T100.61, SN 3.9
-SĀ 20.10 	T99.1235 	? 	T100.62, SN 3.10
-SĀ 20.11 	T99.1236 	? 	T100.63, SN 3.14
-SĀ 20.12 	T99.1237 	? 	T100.64, SN 3.15
-SĀ 20.13 	T99.1238 	? 	T100.65, SN 3.18
-SĀ 20.14 	T99.1239 	? 	T100.66, SN 3.17-18
-SĀ 20.15 	T99.1240 	? 	T100.67
-SĀ 20.16 	T99.1145 	? 	T100.68, SN 3.24
-SĀ 20.17 	T99.1146 	? 	T100.69, SN 3.21, AN 4.85, EĀ 26.5
-SĀ 20.18 	T99.1147 	? 	T100.70, SN 3.25
-SĀ 20.19 	T99.1148 	? 	T100.71, SN 3.11, Ud 6.2
-SĀ 20.20 	T99.1149 	? 	T100.72, SN 3.12, EĀ 33.1
-SĀ 20.21 	T99.1150 	? 	T100.73, SN 3.13 -->
+---
+layout: default
+type: toc
+title: 'The Related Discourses | 20. Warriors | Contents'
+base: ../../../
+previous: ../19/SA19_15.html
+next: ../21/index.html
+---
+
+<h1><a href="../index.html">The Related Discourses</a></h1>
+<h2>20. Warriors</h2>
+
+<hr/>
+
+<h2>Table of Contents</h2>
+
+<table class="ma-toc">
+  <th>Sūtra</th>
+  <th>Taisho</th>
+  <th>Title</th>
+  <th>SĀ<sup>2</sup> Parallel</th>
+  <th>Pali Parallel(s)</th>
+
+  <tr>
+    <td>1.</td>
+    <td>(1226)</td>
+    <td><a href="SA20_1.html"></a>?</td>
+    <td>T100.53</td>
+    <td><a href="https://suttacentral.net/sn3.1" target="_blank">SN 3.1</a></td>
+  </tr>
+  <tr>
+    <td>2.</td>
+    <td>(1227)</td>
+    <td><a href="SA20_2.html"></a>?</td>
+    <td>T100.54</td>
+    <td><a href="https://suttacentral.net/sn3.22" target="_blank">SN 3.22</a></td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>(1228)</td>
+    <td><a href="SA20_3.html"></a>?</td>
+    <td>T100.55</td>
+    <td><a href="https://suttacentral.net/sn3.4" target="_blank">SN 3.4</a></td>
+  </tr>
+  <tr>
+    <td>4.</td>
+    <td>(1229)</td>
+    <td><a href="SA20_4.html"></a>?</td>
+    <td>T100.56</td>
+    <td><a href="https://suttacentral.net/sn3.5" target="_blank">SN 3.5</a></td>
+  </tr>
+  <tr>
+    <td>5.</td>
+    <td>(1230)</td>
+    <td><a href="SA20_5.html"></a>?</td>
+    <td>T100.58</td>
+    <td><a href="https://suttacentral.net/sn3.6" target="_blank">SN 3.6</a></td>
+  </tr>
+  <tr>
+    <td>6.</td>
+    <td>(1231)</td>
+    <td><a href="SA20_6.html"></a>?</td>
+    <td>T100.57</td>
+    <td><a href="https://suttacentral.net/sn3.7" target="_blank">SN 3.7</a></td>
+  </tr>
+  <tr>
+    <td>7.</td>
+    <td>(1232)</td>
+    <td><a href="SA20_7.html"></a>?</td>
+    <td>T100.59</td>
+    <td><a href="https://suttacentral.net/sn3.19" target="_blank">SN 3.19</a></td>
+  </tr>
+  <tr>
+    <td>8.</td>
+    <td>(1233)</td>
+    <td><a href="SA20_8.html"></a>?</td>
+    <td>T100.60</td>
+    <td><a href="https://suttacentral.net/sn3.20" target="_blank">SN 3.20</a></td>
+  </tr>
+  <tr>
+    <td>9.</td>
+    <td>(1234)</td>
+    <td><a href="SA20_9.html"></a>?</td>
+    <td>T100.61</td>
+    <td><a href="https://suttacentral.net/sn3.9" target="_blank">SN 3.9</a></td>
+  </tr>
+  <tr>
+    <td>10.</td>
+    <td>(1235)</td>
+    <td><a href="SA20_10.html"></a>?</td>
+    <td>T100.62</td>
+    <td><a href="https://suttacentral.net/sn3.10" target="_blank">SN 3.10</a></td>
+  </tr>
+  <tr>
+    <td>11.</td>
+    <td>(1236)</td>
+    <td><a href="SA20_11.html"></a>?</td>
+    <td>T100.63</td>
+    <td><a href="https://suttacentral.net/sn3.14" target="_blank">SN 3.14</a></td>
+  </tr>
+  <tr>
+    <td>12.</td>
+    <td>(1237)</td>
+    <td><a href="SA20_12.html"></a>?</td>
+    <td>T100.64</td>
+    <td><a href="https://suttacentral.net/sn3.15" target="_blank">SN 3.15</a></td>
+  </tr>
+  <tr>
+    <td>13.</td>
+    <td>(1238)</td>
+    <td><a href="SA20_13.html"></a>?</td>
+    <td>T100.65</td>
+    <td><a href="https://suttacentral.net/sn3.18" target="_blank">SN 3.18</a></td>
+  </tr>
+  <tr>
+    <td>14.</td>
+    <td>(1239)</td>
+    <td><a href="SA20_14.html"></a>?</td>
+    <td>T100.66</td>
+    <td><a href="https://suttacentral.net/sn3.17" target="_blank">SN 3.17</a></td>
+  </tr>
+  <tr>
+    <td>15.</td>
+    <td>(1240)</td>
+    <td><a href="SA20_15.html"></a>?</td>
+    <td>T100.67</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+
+  <tr>
+    <td>16.</td>
+    <td>(1145)</td>
+    <td><a href="SA20_16.html"></a>?</td>
+    <td>T100.68</td>
+    <td><a href="https://suttacentral.net/sn3.24" target="_blank">SN 3.24</a></td>
+  </tr>
+  <tr>
+    <td>17.</td>
+    <td>(1146)</td>
+    <td><a href="SA20_17.html"></a>?</td>
+    <td>T100.69</td>
+    <td><a href="https://suttacentral.net/sn3.21" target="_blank">SN 3.21</a>, <a href="https://suttacentral.net/an4.85" target="_blank">AN 4.85</a></td>
+  </tr>
+  <tr>
+    <td>18.</td>
+    <td>(1147)</td>
+    <td><a href="SA20_18.html"></a>?</td>
+    <td>T100.70</td>
+    <td><a href="https://suttacentral.net/sn3.25" target="_blank">SN 3.25</a></td>
+  </tr>
+  <tr>
+    <td>19.</td>
+    <td>(1148)</td>
+    <td><a href="SA20_19.html"></a>?</td>
+    <td>T100.71</td>
+    <td><a href="https://suttacentral.net/sn3.11" target="_blank">SN 3.11</a>, <a href="https://suttacentral.net/ud6.2" target="_blank"></a>Ud 6.2</a></td>
+  </tr>
+  <tr>
+    <td>20.</td>
+    <td>(1149)</td>
+    <td><a href="SA20_20.html"></a>?</td>
+    <td>T100.72</td>
+    <td><a href="https://suttacentral.net/sn3.12" target="_blank">SN 3.12</a></td>
+  </tr>
+  <tr>
+    <td>21.</td>
+    <td>(1150)</td>
+    <td><a href="SA20_21.html"></a>?</td>
+    <td>T100.73</td>
+    <td><a href="https://suttacentral.net/sn3.13" target="_blank">SN 3.13</a></td>
+  </tr>
+  </table>
+
+<hr/>
