--- a/01_agama/samyukta/21/index.html
+++ b/01_agama/samyukta/21/index.html
@@ -1,38 +1,292 @@
-<!--SĀ 21.1 	T99.1151 	? 	T100.74, SN 7.3
-SĀ 21.2 	T99.1152 	? 	T100.75, SN 7.2
-SĀ 21.3 	T99.1153 	? 	T100.76, SN 7.3
-SĀ 21.4 	T99.1154 	? 	T100.77, SN 7.4
-SĀ 21.5 	T99.1155 	? 	T100.78, SN 7.16
-SĀ 21.6 	T99.1156 	? 	T100.79, SN 7.5
-SĀ 21.7 	T99.1157 	? 	T100.80, SN 7.12
-SĀ 21.8 	T99.1158 	? 	T100.81, SN 7.1
-SĀ 21.9 	T99.1159 	? 	T100.82, Snp 3.5
-SĀ 21.10 	T99.1160 	? 	T100.83, SN 7.7
-SĀ 21.11 	T99.1161 	? 	T100.84, SN 7.8
-SĀ 21.12 	T99.1162 	? 	T100.85
-SĀ 21.13 	T99.1163 	? 	T100.86, AN 3.51
-SĀ 21.14 	T99.88 	? 	T100.88, SN 7.19
-SĀ 21.15 	T99.89 	? 	T100.89, AN 4.39
-SĀ 21.16 	T99.90 	? 	T100.90, AN 4.40
-SĀ 21.17 	T99.91 	? 	T100.91, AN 8.55
-SĀ 21.18 	T99.92 	? 	T100.258, SN 7.15
-SĀ 21.19 	T99.93 	? 	T100.259, SN 7.44
-SĀ 21.20 	T99.94 	? 	T100.260, MĀ 148, EĀ 17.8
-SĀ 21.21 	T99.95 	? 	T100.261, AN 3.57
-SĀ 21.22 	T99.96 	? 	T100.262, SN 7.14
-SĀ 21.23 	T99.97 	? 	T100.263, SN 7.20
-SĀ 21.24 	T99.98 	? 	T100.264, SN 7.11, Snp 1.4
-SĀ 21.25 	T99.99 	? 	T100.265, SN 6.3
-SĀ 21.26 	T99.100 	? 	T100.266
-SĀ 21.27 	T99.101 	? 	T100.267, AN 4.36, EĀ 38.3
-SĀ 21.28 	T99.102 	? 	T100.268, Snp 1.7
-SĀ 21.29 	T99.1178 	? 	T100.92, Thig. 133-138
-SĀ 21.30 	T99.1179 	? 	T100.93, SN 7.10
-SĀ 21.31 	T99.1180 	? 	T100.94, SN 7.11
-SĀ 21.32 	T99.1181 	? 	T100.95, SN 7.13
-SĀ 21.33 	T99.1182 	? 	T100.96, SN 7.17
-SĀ 21.34 	T99.1183 	? 	T100.97, SN 7.18
-SĀ 21.35 	T99.1184 	? 	T100.98, SN 7.9, Snp 3.4
-SĀ 21.36 	T99.1185 	? 	T100.99, MN 7, MĀ 93, EĀ 13.5
-SĀ 21.37 	T99.1186 	? 	T100.100, SN 7.6
-SĀ 21.38 	T99.1187 	? 	T100.100, SN 7.6 -->
+---
+layout: default
+type: toc
+title: 'The Related Discourses | 21. Brahmins | Contents'
+base: ../../../
+previous: ../20/index.html
+next: ../25/index.html
+---
+
+<h1><a href="../index.html">The Related Discourses</a></h1>
+<h2>21. Brahmins</h2>
+
+<hr/>
+
+<h2>Table of Contents</h2>
+
+<table class="ma-toc">
+  <th>Sūtra</th>
+  <th>Taisho</th>
+  <th>Title</th>
+  <th>SĀ<sup>2</sup> Parallel</th>
+  <th>Pali Parallel(s)</th>
+
+  <tr>
+    <td>1.</td>
+    <td>(1151)</td>
+    <td><a href="SA21_1.html"></a>?</td>
+    <td>T100.74</td>
+    <td><a href="https://suttacentral.net/sn7.3" target="_blank">SN 7.3</a></td>
+  </tr>
+  <tr>
+    <td>2.</td>
+    <td>(1152)</td>
+    <td><a href="SA21_2.html"></a>?</td>
+    <td>T100.75</td>
+    <td><a href="https://suttacentral.net/sn7.2" target="_blank">SN 7.2</a></td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>(1153)</td>
+    <td><a href="SA21_3.html"></a>?</td>
+    <td>T100.76</td>
+    <td><a href="https://suttacentral.net/sn7.3" target="_blank">SN 7.3</a></td>
+  </tr>
+  <tr>
+    <td>4.</td>
+    <td>(1154)</td>
+    <td><a href="SA21_4.html"></a>?</td>
+    <td>T100.77</td>
+    <td><a href="https://suttacentral.net/sn7.4" target="_blank">SN 7.4</a></td>
+  </tr>
+  <tr>
+    <td>5.</td>
+    <td>(1155)</td>
+    <td><a href="SA21_5.html"></a>?</td>
+    <td>T100.78</td>
+    <td><a href="https://suttacentral.net/sn7.16" target="_blank">SN 7.16</a></td>
+  </tr>
+  <tr>
+    <td>6.</td>
+    <td>(1156)</td>
+    <td><a href="SA21_6.html"></a>?</td>
+    <td>T100.79</td>
+    <td><a href="https://suttacentral.net/sn7.5" target="_blank">SN 7.5</a></td>
+  </tr>
+  <tr>
+    <td>7.</td>
+    <td>(1157)</td>
+    <td><a href="SA21_7.html"></a>?</td>
+    <td>T100.80</td>
+    <td><a href="https://suttacentral.net/sn7.12" target="_blank">SN 7.12</a></td>
+  </tr>
+  <tr>
+    <td>8.</td>
+    <td>(1158)</td>
+    <td><a href="SA21_8.html"></a>?</td>
+    <td>T100.81</td>
+    <td><a href="https://suttacentral.net/sn7.1" target="_blank">SN 7.1</a></td>
+  </tr>
+  <tr>
+    <td>9.</td>
+    <td>(1159)</td>
+    <td><a href="SA21_9.html"></a>?</td>
+    <td>T100.82</td>
+    <td><a href="https://suttacentral.net/snp3.5" target="_blank">Snp 3.5</a></td>
+  </tr>
+  <tr>
+    <td>10.</td>
+    <td>(1160)</td>
+    <td><a href="SA21_10.html"></a>?</td>
+    <td>T100.83</td>
+    <td><a href="https://suttacentral.net/sn7.7" target="_blank">SN 7.7</a></td>
+  </tr>
+  <tr>
+    <td>11.</td>
+    <td>(1161)</td>
+    <td><a href="SA21_11.html"></a>?</td>
+    <td>T100.84</td>
+    <td><a href="https://suttacentral.net/sn7.8" target="_blank">SN 7.8</a></td>
+  </tr>
+  <tr>
+    <td>12.</td>
+    <td>(1162)</td>
+    <td><a href="SA21_12.html"></a>?</td>
+    <td>T100.85</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>13.</td>
+    <td>(1163)</td>
+    <td><a href="SA21_13.html"></a>?</td>
+    <td>T100.86</td>
+    <td><a href="https://suttacentral.net/an3.51" target="_blank">AN 3.51</a></td>
+  </tr>
+  <tr>
+    <td>14.</td>
+    <td>(88)</td>
+    <td><a href="SA21_14.html"></a>?</td>
+    <td>T100.88</td>
+    <td><a href="https://suttacentral.net/sn7.19" target="_blank">SN 7.19</a></td>
+  </tr>
+  <tr>
+    <td>15.</td>
+    <td>(89)</td>
+    <td><a href="SA21_15.html"></a>?</td>
+    <td>T100.89</td>
+    <td><a href="https://suttacentral.net/an4.39" target="_blank">AN 4.39</a></td>
+  </tr>
+  <tr>
+    <td>16.</td>
+    <td>(90)</td>
+    <td><a href="SA21_16.html"></a>?</td>
+    <td>T100.90</td>
+    <td><a href="https://suttacentral.net/an4.40" target="_blank">AN 4.40</a></td>
+  </tr>
+  <tr>
+    <td>17.</td>
+    <td>(91)</td>
+    <td><a href="SA21_17.html"></a>?</td>
+    <td>T100.91</td>
+    <td><a href="https://suttacentral.net/an8.55" target="_blank">AN 8.55</a></td>
+  </tr>
+  <tr>
+    <td>18.</td>
+    <td>(92)</td>
+    <td><a href="SA21_18.html"></a>?</td>
+    <td>T100.258</td>
+    <td><a href="https://suttacentral.net/sn7.15" target="_blank">SN 7.15</a></td>
+  </tr>
+  <tr>
+    <td>19.</td>
+    <td>(93)</td>
+    <td><a href="SA21_19.html"></a>?</td>
+    <td>T100.259</td>
+    <td><a href="https://suttacentral.net/sn7.44" target="_blank">SN 7.44</a></td>
+  </tr>
+  <tr>
+    <td>20.</td>
+    <td>(94)</td>
+    <td><a href="SA21_20.html"></a>?</td>
+    <td>T100.260</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>21.</td>
+    <td>(95)</td>
+    <td><a href="SA21_21.html"></a>?</td>
+    <td>T100.261</td>
+    <td><a href="https://suttacentral.net/an3.57" target="_blank">AN 3.57</a></td>
+  </tr>
+  <tr>
+    <td>22.</td>
+    <td>(96)</td>
+    <td><a href="SA21_22.html"></a>?</td>
+    <td>T100.262</td>
+    <td><a href="https://suttacentral.net/sn7.14" target="_blank">SN 7.14</a></td>
+  </tr>
+  <tr>
+    <td>23.</td>
+    <td>(97)</td>
+    <td><a href="SA21_23.html"></a>?</td>
+    <td>T100.263</td>
+    <td><a href="https://suttacentral.net/sn7.20" target="_blank">SN 7.20</a></td>
+  </tr>
+  <tr>
+    <td>24.</td>
+    <td>(98)</td>
+    <td><a href="SA21_24.html"></a>?</td>
+    <td>T100.264</td>
+    <td><a href="https://suttacentral.net/sn7.11" target="_blank">SN 7.20</a>, <a href="https://suttacentral.net/snp1.4" target="_blank">Snp 1.4</a></td>
+  </tr>
+  <tr>
+    <td>25.</td>
+    <td>(99)</td>
+    <td><a href="SA21_25.html"></a>?</td>
+    <td>T100.265</td>
+    <td><a href="https://suttacentral.net/sn7.20" target="_blank">SN 6.3</a></td>
+  </tr>
+  <tr>
+    <td>26.</td>
+    <td>(100)</td>
+    <td><a href="SA21_26.html"></a>?</td>
+    <td>T100.266</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>27.</td>
+    <td>(101)</td>
+    <td><a href="SA21_27.html"></a>?</td>
+    <td>T100.267</td>
+    <td><a href="https://suttacentral.net/an4.36" target="_blank">AN 4.36</a></td>
+  </tr>
+  <tr>
+    <td>28.</td>
+    <td>(102)</td>
+    <td><a href="SA21_28.html"></a>?</td>
+    <td>T100.268</td>
+    <td><a href="https://suttacentral.net/snp1.7" target="_blank">Snp 1.7</a></td>
+  </tr>
+  <tr>
+    <td>29.</td>
+    <td>(1178)</td>
+    <td><a href="SA21_29.html"></a>?</td>
+    <td>T100.92</td>
+    <td><a href="https://suttacentral.net/thig6.2" target="_blank">thig 6.2</a></td>
+  </tr>
+  <tr>
+    <td>30.</td>
+    <td>(1179)</td>
+    <td><a href="SA21_30.html"></a>?</td>
+    <td>T100.93</td>
+    <td><a href="https://suttacentral.net/sn7.10" target="_blank">SN 7.10</a></td>
+  </tr>
+  <tr>
+    <td>31.</td>
+    <td>(1180)</td>
+    <td><a href="SA21_31.html"></a>?</td>
+    <td>T100.94</td>
+    <td><a href="https://suttacentral.net/sn7.11" target="_blank">SN 7.11</a></td>
+  </tr>
+  <tr>
+    <td>32.</td>
+    <td>(1181)</td>
+    <td><a href="SA21_32.html"></a>?</td>
+    <td>T100.95</td>
+    <td><a href="https://suttacentral.net/sn7.13" target="_blank">SN 7.13</a></td>
+  </tr>
+  <tr>
+    <td>33.</td>
+    <td>(1182)</td>
+    <td><a href="SA21_33.html"></a>?</td>
+    <td>T100.96</td>
+    <td><a href="https://suttacentral.net/sn7.17" target="_blank">SN 7.17</a></td>
+  </tr>
+<tr>
+    <td>34.</td>
+    <td>(1183)</td>
+    <td><a href="SA21_34.html"></a>?</td>
+    <td>T100.97</td>
+    <td><a href="https://suttacentral.net/sn7.18" target="_blank">SN 7.18</a></td>
+  </tr>
+  <tr>
+    <td>35.</td>
+    <td>(1184)</td>
+    <td><a href="SA21_35.html"></a>?</td>
+    <td>T100.98</td>
+    <td><a href="https://suttacentral.net/sn7.9" target="_blank">SN 7.9</a>, <a href="https://suttacentral.net/snp3.4" target="_blank">Snp 3.4</a></td>
+  </tr>
+  <tr>
+    <td>36.</td>
+    <td>(1185)</td>
+    <td><a href="SA21_36.html"></a>?</td>
+    <td>T100.99</td>
+    <td><a href="https://suttacentral.net/mn7" target="_blank">MN 7</a></td>
+  </tr>
+  <tr>
+    <td>37.</td>
+    <td>(1186)</td>
+    <td><a href="SA21_37.html"></a>?</td>
+    <td>T100.100</td>
+    <td><a href="https://suttacentral.net/sn7.6" target="_blank">SN 7.6</a></td>
+  </tr>
+  <tr>
+    <td>38.</td>
+    <td>(1187)</td>
+    <td><a href="SA21_38.html"></a>?</td>
+    <td>T100.100</td>
+    <td><a href="https://suttacentral.net/sn7.6" target="_blank">SN 7.6</a></td>
+  </tr>
+</table>
+
+<hr/>
