--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>17-Jun-2025</dt>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_62-73.html">SĀ 1.62-73 Feeling</a></dd>
     <dt>16-Jun-2025</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_61.html">SĀ 1.61 Udāna</a></dd>
     <dt>15-Apr-2025</dt>
