--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>22-June-2025</dt>
+    <dd>Added <a href="01_agama/samyukta/03/SA3_8.html">SĀ 3.8 Unlearned</a></dd>
     <dt>19-Jun-2025</dt>
     <dd>Added <a href="01_agama/samyukta/03/SA3_26.html">SĀ 3.26 Susīma</a></dd>
     <dt>17-Jun-2025</dt>
