Various edits and typo fixes, plus released on revised MA 3.

--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -4440,9 +4440,32 @@ base: ../../
       <td>崛</td><td>gɪuət</td><td>gɪuət</td><td>kiu</td><td>ts̆üe</td><td>jué, juè</td><td><em>393>80</em></td>
     </tr>
 
+    <tr>
+      <td>巴</td><td>păg</td><td>pă</td><td>pa</td><td>pa</td><td>bā</td><td><em>402</em></td>
+    </tr>
+
+    <tr>
+      <td>隣</td><td>lɪen</td><td>lɪĕn</td><td>liən</td><td>liən</td><td>lín</td><td><em>1434</em></td>
+    </tr>
+
+    <tr>
+      <td>致</td><td>tɪed</td><td>ṭɪi</td><td>ṭṣï</td><td>ṭṣï</td><td>zhì</td><td><em>1079</em></td>
+    </tr>
+
+    <tr>
+      <td>陵</td><td>lɪəŋ</td><td>lɪəŋ</td><td>liəŋ</td><td>liəŋ</td><td>líng</td><td><em>1427</em></td>
+    </tr>
+
+    <tr>
+      <td>鎖</td><td>suar</td><td>sua</td><td>suo</td><td>suə</td><td>suŏ</td><td><em>1387</em></td>
+    </tr>
+
+    <tr>
+      <td>梭</td><td>suar</td><td>sua</td><td>suo</td><td>suə</td><td>suō</td><td><em>650</em></td>
+    </tr>
 <!-- work zone
-羅閲城
-la-yiuɛt + city
+毘羅先
+
 -->
 </table>
 
