--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>23-Sep-2025</dt>
+    <dd>Added <a href="01_agama/samyukta/03/SA3_9.html">SĀ 3.9 Introspection</a></dd>
     <dt>15-Jul-2025</dt>
     <dd>Added <a href="01_agama/ekottarika/40/EA_40_02.html">EĀ 40.2 Varṣākāra</a></dd>
     <dt>8-Jul-2025</dt>
