--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>16-Oct-2025</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/03/SA3_13.html">SĀ 3.13 Not Yours</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_14.html">SĀ 3.14 Dependent Origination</a></dd>
+    <dd><a href="01_agama/madhyama/MA_109.html">MĀ 109 Examining One’s Own Mind</a></dd>
+    <dd><a href="01_agama/madhyama/MA_110.html">MĀ 110 Examining One’s Mind (2)</a></dd>
     <dt>6-Oct-2025</dt>
     <dd>Added <a href="01_agama/madhyama/MA_142.html">MĀ 142 Varṣākāra</a></dd>
     <dt>5-Oct-2025</dt>
