--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>31-Oct-2025</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_113.html">MĀ 113 The Root of Things</a></dd>
     <dt>22-Oct-2025</dt>
     <dd>Added <a href="01_agama/ekottarika/48/EA_48_04.html">EĀ 48.4 The Buddhas of the Past</a></dd>
     <dt>16-Oct-2025</dt>
