--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -1039,6 +1039,9 @@ base: ../../
     <th align="left" width="10%"><em>Gakken</em></th>
 
     <tr>
+      <td>升</td><td>thiəŋ</td><td>ʃɪəŋ</td><td>ʃɪəŋ</td><td>ṣəŋ</td><td>shēng</td><td><em>177</em></td>
+    </tr>
+    <tr>
       <td>卑</td><td>pieg</td><td>piĕ</td><td>pi</td><td>pↄi</td><td>bēi</td><td><em>183</em></td>
     </tr>
 </table>
@@ -3460,6 +3463,9 @@ base: ../../
     <th align="left" width="16%">Pinyin</th>
     <th align="left" width="10%"><em>Gakken</em></th>
     <tr>
+      <td>販</td><td>pɪuăn</td><td>pɪuʌn</td><td>fan</td><td>fan</td><td>fàn</td><td><em>1254</em></td>
+    </tr>
+    <tr>
       <td>賀</td><td>ɦag</td><td>ɦa</td><td>ho</td><td>hə</td><td>hè</td><td><em>1255</em></td>
     </tr>
     <tr>
@@ -4457,11 +4463,14 @@ base: ../../
       <td>㝹 (=羺)</td><td>?</td><td>~nu?</td><td>?</td><td>?</td><td>nóu</td><td><em>n/a</em></td>
     </tr>
 
-    
+    <tr>
+      <td>葦</td><td>ɦɪuər</td><td>ɦɪuəi</td><td>uəi</td><td>uəi</td><td>wěi</td><td><em>1116>90</em></td>
+    </tr>
+
 
 <!-- work zone
-卑耶和題俱
-piĕ-yiă-ɦua-dei-kɪu = Piyavadiku
+阿難
+•a-nan
 -->
 </table>
 
