--- a/translations.html
+++ b/translations.html
@@ -81,7 +81,14 @@ title: Dharma Pearls | Translations
     <li>T781: <a class="title" href="09_other_sutras/T781.html">The Ten Powers</a></li>
     <li>T802: <a class="title" href="09_other_sutras/T802.html">Confidence in the Knowledge Powers</a></li>
   </ul> 
+    <hr/>
 
+  <h2>Abhidharma Texts</h2>
+  <p>There are Chinese translations of a large corpus of Abhidharma texts. The majority of them belong to the Sarvāstivāda tradition, but there is also a translation of a Dharmaguptaka Abhidharma collection. These materials can be helpful as exegesis regarding Āgamas <em>sūtra</em>s and also contain quotes of EBTs. There are no plans currently for any wholesale translation of these texts to English, but some important excepts may be released that aid in the study of the Āgamas.</p>
+
+  <ul class="list-style-none">
+    <li>T1548: <a class="title" href="13_abhidharma\T1548\index.html">The Śāriputra Abhidharma</a></li>
+  </ul>
     <hr style="margin-top: 2em; margin-bottom: 2em;" />
     <br/>
     <br/>
