--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>3-Dec-2025</dt>
+    <dd>Added Higher Teaching of Śāriputra <a href="13_abhidharma/T1548/index.html">TOC</a></dd>
+    <dd>Added Higher Teaching of Śāriputra <a href="13_abhidharma/T1548/C15.html">Chapter 15: Conditionality</a></dd>
     <dt>31-Oct-2025</dt>
     <dd>Added <a href="01_agama/madhyama/MA_113.html">MĀ 113 The Root of Things</a></dd>
     <dt>22-Oct-2025</dt>
