corrections and fixes

--- a/donations.html
+++ b/donations.html
@@ -7,7 +7,7 @@ title: Dharma Pearls | Donate to the Project
 <article class="home">
 <h1>Support the Translation Project</h1>
 
-<p><em>Dharma Pearls</em> is a longterm project that aims to transfer a large corpus of Buddhist literature preserved in middle Chinese to modern English. The core mission is to make these materials as accessible to the modern English reader as possible. Because books on this topic often fall out of print, we choose to retain our legal copyright and publish our translations as electronic publications. While we may publish physical books in the future, our translations will always be available in electronic form.</p>
+<p><em>Dharma Pearls</em> is a long-term project that aims to transfer a large corpus of Buddhist literature preserved in middle Chinese to modern English. The core mission is to make these materials as accessible to the modern English reader as possible. Because books on this topic often fall out of print, we choose to retain our legal copyright and publish our translations as electronic publications. While we may publish physical books in the future, our translations will always be available in electronic form.</p>
 
 <p>This means that we are not funded by selling copies of our work; rather, we are funded through the generosity of like-minded people in the world who share our love and respect for these ancient texts and the wisdom that they impart.</p>
 
