--- a/whats-new.html
+++ b/whats-new.html
@@ -692,7 +692,7 @@ title: Dharma Pearls | What’s New
   <dt>14-Oct-2019</dt>
     <dd>Sutras 748-754 and 758-761 have been added to the <a class="title" href="01_agama/samyukta/index.html">Related Discourses</a>.</dd>
   <dt>11-Oct-2019</dt>
-    <dd>The first "official" update released. Aside from an improved web design, it includes translations of Sutra 29 of the <a class="title" href="01_agama/dirgha/index.html">Long Discourses</a> and Sutras 1-7 of the <a class="title" href="01_agama/madhyama/index.html">Medium Discourses</a>.</dd>
+    <dd>The first “official” update released. Aside from an improved web design, it includes translations of Sutra 29 of the <a class="title" href="01_agama/dirgha/index.html">Long Discourses</a> and Sutras 1-7 of the <a class="title" href="01_agama/madhyama/index.html">Medium Discourses</a>.</dd>
   <dt>15-Sep-2019</dt>
     <dd>The <em>Dharma Pearls</em> repo on Github goes public and is published on Github Pages. This was a broken web design. The release was simply to walk-through the Github Pages deployment process.</dd>
 <dl>
