--- a/whats-new.html
+++ b/whats-new.html
@@ -81,7 +81,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_166.html">SĀ 1.166 The World</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_167.html">SĀ 1.167 The Aggregates</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_168.html">SĀ 1.168 Being Contaminated and Uncontaminated</a></dd>
-    <dd><a href="01_agama/samyukta/01/SA1_169.html">SĀ 1.169 Self Pride</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_169.html">SĀ 1.169 Self Conceit</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_28.html">SĀ 6.28 Ten Things</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_29.html">SĀ 6.29 Ten Things (2)</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_30.html">SĀ 6.30 Ten Things (3)</a></dd>
