Added translation of SA 1.170

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>10-Jan-2026</dt>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_170.html">SĀ 1.170 Ten Questions</a></dd>
     <dt>3-Dec-2025</dt>
     <dd>Added Higher Teaching of Śāriputra <a href="13_abhidharma/T1548/index.html">TOC</a></dd>
     <dd>Added Higher Teaching of Śāriputra <a href="13_abhidharma/T1548/C15.html">Chapter 15: Conditionality</a></dd>
