--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>11-Jan-2016</dt>
+      <dd>Translations added:</dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_1.html">SĀ 5.1 Measureless Elements</a></dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_2.html">SĀ 5.2 Elements of Association</a></dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_3.html">SĀ 5.3 With Verse</a></dd>
     <dt>10-Jan-2026</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_170.html">SĀ 1.170 Ten Questions</a></dd>
     <dt>3-Dec-2025</dt>
