corrected capitalization of "Dynasty" to "dynasty"

--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -10,13 +10,13 @@ base: ../../
 
 <p>Below is a table of reconstructed pronunciations of Chinese characters appearing in the Buddhist translations. The OC, EMC, LMC, and EM pronunciations listed can be found in the <em>Gakken</em> dictionary cited below.</p>
 
-<p>Note that for Chinese translations after the Han Dynasty (ca. 200 AD) and prior to the Song Dynasty (ca. 1000 AD), the EMC. pronunciations are the most relevant. Late Tang era (ca. 900 AD) and Song Dynasty translations (ca. 1000-1300 AD) would have transitioned to the LMC pronunications. Translations after the fall of the Song (ca. 1300 AD) would have used EM pronunciations.</p>
+<p>Note that for Chinese translations after the Han dynasty (ca. 200 AD) and prior to the Song dynasty (ca. 1000 AD), the EMC pronunciations are the most relevant. Late Tang era (ca. 900 AD) and Song dynasty translations (ca. 1000-1300 AD) would have transitioned to the LMC pronunications. Translations after the fall of the Song (ca. 1300 AD) would have used EM pronunciations.</p>
 
 <h4>Abbreviations</h4>
-<p>OC (Old Chinese): Pre-Han Dynasty<br>
-  EMC. (Early Middle Chinese): North-South Era to Tang Dynasty<br>
-  LMC (Late Middle Chinese): Song Dynasty<br>
-  EM (Early Mandarin): Yuan to Qing Dynasty<br>
+<p>OC (Old Chinese): Pre-Han dynasty<br>
+  EMC (Early Middle Chinese): North-South era to Tang dynasty<br>
+  LMC (Late Middle Chinese): Song dynasty<br>
+  EM (Early Mandarin): Yuan to Qing dynasty<br>
   Pinyin: Modern Pinyin Romanization<br>
   <em>Gakken</em>: Page number in <em>Gakken Kanwa Dai Jiten</em> (1994 ed.)</p>
 
