--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>1-Feb-2026</dt>
+      <dd>Translations added:</dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_4.html">SĀ 5.4 Walking Together</a></dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_5.html">SĀ 5.5 With Verse</a></dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_6.html">SĀ 5.6 The Five Precepts</a></dd>
+      <dd>Added <a href="01_agama/samyukta/05/SA5_7-18.html">SĀ 5.7-18 Belief et al.</a></dd>
     <dt>11-Jan-2016</dt>
       <dd>Translations added:</dd>
       <dd>Added <a href="01_agama/samyukta/05/SA5_1.html">SĀ 5.1 Measureless Elements</a></dd>
@@ -88,7 +94,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_166.html">SĀ 1.166 The World</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_167.html">SĀ 1.167 The Aggregates</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_168.html">SĀ 1.168 Being Contaminated and Uncontaminated</a></dd>
-    <dd><a href="01_agama/samyukta/01/SA1_169.html">SĀ 1.169 Self Conceit</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_169.html">SĀ 1.169 Self-Conceit</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_28.html">SĀ 6.28 Ten Things</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_29.html">SĀ 6.29 Ten Things (2)</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_30.html">SĀ 6.30 Ten Things (3)</a></dd>
