--- a/donations.html
+++ b/donations.html
@@ -15,7 +15,14 @@ title: Dharma Pearls | Donate to the Project
 <ul>
   <li><strong><a href="https://github.com/sponsors/winterdharma">Our Github Sponsors page</a></strong>: This is the most effective way to make a donation. Because Dharma Pearls is not an institutional or corporate project, the Github Sponsors program does not deduct any fees from the donations that we receive.</li>
   <li><strong><a href="https://www.patreon.com/DharmaPearls">Our Patreon page</a></strong>: Patreon is another option for supporting the project. Patreon deducts 12.3% of donations through various fees.</li>
+  <li><strong><a href="https://www.paypal.com/donate/?hosted_button_id=JSTK8MM8J5Y7W">Our PayPal Account</a></strong>: Another option is to make contributions to my PayPal account. One-time and recurring donations can be made in this way. PayPal deducts 2.89% + a fixed fee + 1.50% for international donations. For US donors, the fees are 2.89% + $0.49.</li>
   <li><strong><a href="https://dharmapearls.substack.com">Subscribe to our Substack Newsletter</a></strong>: We recommend anyone who wants to receive regular updates to subscribe to our Substack newsletter. Charles Patton also posts occasional essays to Substack. It’s possible to sign up for a paid subscription as a way to donate to the project, but a free subscription will receive all our publications. Substack subscriptions have about 20% deducted in fees.</li>
+  <li><strong>Donate by Mail</strong>: Lastly, donations can be sent to a physical mailing address:<br/><br/>
+    <address>
+      Dharma Pearls c/o Charles Patton<br/>
+      PO Box 123<br/>
+    Gardena, CA 90248<br/>
+    USA</address></li>
 </ul>
 </p>
 </article>
