--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>8-Feb-2026</dt>
+    <dd>Translations added:</dd>
+      <dd><a href="01_agama/samyukta/05/SA5_19.html">SĀ 5.19 The Variety of Elements</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_20.html">SĀ 5.20 The Variety of Contacts, et al.</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_21.html">SĀ 5.21 The Variety of Contacts et al. (2)</a></dd>
     <dt>1-Feb-2026</dt>
       <dd>Translations added:</dd>
       <dd>Added <a href="01_agama/samyukta/05/SA5_4.html">SĀ 5.4 Walking Together</a></dd>
