--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>10-Feb-2026</dt>
+    <dd>Translations added:</dd>
+      <dd><a href="01_agama/samyukta/01/SA1_74-85.html">SĀ 1.74-85 Birth</a></dd>
+      <dd><a href="01_agama/samyukta/01/SA1_86-97.html">SĀ 1.86-97 Delight</a></dd>
+      <dd><a href="01_agama/samyukta/01/SA1_98-109.html">SĀ 1.98-109 Teaching the Six Sense Fields</a></dd>
+      <dd><a href="01_agama/samyukta/01/SA1_110-112.html">SĀ 1.110-112 One’s Path</a></dd>
     <dt>8-Feb-2026</dt>
     <dd>Translations added:</dd>
       <dd><a href="01_agama/samyukta/05/SA5_19.html">SĀ 5.19 The Variety of Elements</a></dd>
@@ -13,15 +19,15 @@ title: Dharma Pearls | What’s New
       <dd><a href="01_agama/samyukta/05/SA5_21.html">SĀ 5.21 The Variety of Contacts et al. (2)</a></dd>
     <dt>1-Feb-2026</dt>
       <dd>Translations added:</dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_4.html">SĀ 5.4 Walking Together</a></dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_5.html">SĀ 5.5 With Verse</a></dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_6.html">SĀ 5.6 The Five Precepts</a></dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_7-18.html">SĀ 5.7-18 Belief et al.</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_4.html">SĀ 5.4 Walking Together</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_5.html">SĀ 5.5 With Verse</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_6.html">SĀ 5.6 The Five Precepts</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_7-18.html">SĀ 5.7-18 Belief et al.</a></dd>
     <dt>11-Jan-2016</dt>
       <dd>Translations added:</dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_1.html">SĀ 5.1 Measureless Elements</a></dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_2.html">SĀ 5.2 Elements of Association</a></dd>
-      <dd>Added <a href="01_agama/samyukta/05/SA5_3.html">SĀ 5.3 With Verse</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_1.html">SĀ 5.1 Measureless Elements</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_2.html">SĀ 5.2 Elements of Association</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_3.html">SĀ 5.3 With Verse</a></dd>
     <dt>10-Jan-2026</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_170.html">SĀ 1.170 Ten Questions</a></dd>
     <dt>3-Dec-2025</dt>
