various edits and typo fixes

--- a/whats-new.html
+++ b/whats-new.html
@@ -15,7 +15,7 @@ title: Dharma Pearls | What’s New
     <dt>8-Feb-2026</dt>
     <dd>Translations added:</dd>
       <dd><a href="01_agama/samyukta/05/SA5_19.html">SĀ 5.19 The Variety of Elements</a></dd>
-      <dd><a href="01_agama/samyukta/05/SA5_20.html">SĀ 5.20 The Variety of Contacts, et al.</a></dd>
+      <dd><a href="01_agama/samyukta/05/SA5_20.html">SĀ 5.20 The Variety of Contacts et al.</a></dd>
       <dd><a href="01_agama/samyukta/05/SA5_21.html">SĀ 5.21 The Variety of Contacts et al. (2)</a></dd>
     <dt>1-Feb-2026</dt>
       <dd>Translations added:</dd>
@@ -207,7 +207,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/02/SA2_41-48.html">SĀ 2.41-48 Rāhula (1-8)</a></dd>
     <dd><a href="01_agama/samyukta/02/SA2_49-56.html">SĀ 2.49-56 Rāhula (9-16)</a></dd>
     <dd><a href="01_agama/samyukta/02/SA2_57.html">SĀ 2.57 Rāhula (17)</a></dd>
-    <dd><a href="01_agama/samyukta/02/SA2_58-74.html">SĀ 2.58-74 How to End the Contaminants, et al</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_58-74.html">SĀ 2.58-74 How to End the Contaminants et al.</a></dd>
   <dt>10-Feb-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_50.html">SĀ 1.50 Lack of Knowledge (2)</a></dd>
